developer/resources/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-k8sgateway-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "$host"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "<namespace>/<root-ca-secret-name>"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "api.am.example.com"
        - "gw.example.com"
        - "idp.am.example.com"
  rules:
    - host: api.am.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2-gateway-service
                port:
                  number: 9095
    - host: gw.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2-gateway-service
                port:
                  number: 9095
    - host: idp.am.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2-gateway-service
                port:
                  number: 9095
